--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
     <script src="script.js"></script>
 
     <h1>Summan sarfraz</h1>
-    <p>It's our goal to doing working in our best manner. Earning money atleast i pay my own fees.That's all.</p>
+    <p>It's our goal to doing working in our best manner. Earning money atleast i pay my own fees.That's all that is my goal of life.</p>
         <img src="moon.jpg" alt="My pic" width="200">
           <br></br>
     <a href="https://www.google.com" target="_blank">Visit Google</a>
     <br></br>
-    <p id="message">age is juat a number</p>
+    <p id="message">age is juat a Number</p>
 
 <button onclick="GuessAge()">Guess Age</button>
 
 </body>
+
 </html>
